feat: implement the first crud operation in brands service
